Fix button spacing

--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,9 @@ ul {
 }
 
 .link:hover {
-  font-size: 18px;
+  color: #8D724B;
   background-color: rgb(153, 0, 34);
-  padding: 5px;
+  padding: 2px;
   border-radius: 5px;
 }
 
